fix: AI drawer's resize handler horizontal alignment (#3912)

--- a/src/app-layout/visual-refresh-toolbar/drawer/styles.scss
+++ b/src/app-layout/visual-refresh-toolbar/drawer/styles.scss
@@ -262,6 +262,8 @@ $ai-drawer-heider-height: 41px;
     }
 
     > .drawer-slider {
+      display: flex;
+      justify-content: center;
       inline-size: awsui.$space-xs;
       overflow: hidden;
       grid-column: 2;
@@ -271,7 +273,6 @@ $ai-drawer-heider-height: 41px;
     // maybe we need to introduce an additional prop in the component to make it more flexible?
     // stylelint-disable-next-line @cloudscape-design/no-implicit-descendant
     .ai-drawer-slider-handle {
-      transform: translate(-4px);
       color: awsui.$color-text-interactive-inverted-default;
 
       &:hover {
